turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:3: error: Missing closing brace `}' assumed here
val STOP   = 0;
^Turmite:3: error: expected class or object definition
val STOP   = 0;
^Turmite:4: error: expected class or object definition
val NOTURN = 1;
^Turmite:5: error: expected class or object definition
val LEFT   = 2;
^Turmite:6: error: expected class or object definition
val BACK   = 4;
^Turmite:7: error: expected class or object definition
val RIGHT  = 8;
^Turmite:9: error: expected class or object definition
val NEXT_COLOR = 0;
^Turmite:10: error: expected class or object definition
val NEXT_MOVE  = 1;
^Turmite:11: error: expected class or object definition
val NEXT_STATE = 2;
^Turmite:16: error: expected class or object definition
var T = new Array(0,1)
^Turmite:17: error: expected class or object definition
var U = new Array(0,1)
^Turmite:18: error: expected class or object definition
var V = new Array((1,2,0,1,2,1),(0,1,0,0,1,1))
^Turmite:20: error: expected class or object definition
var rule:Array[Array[Array[Int]]] = T[U[V[2]]
^Turmite:28: error: expected class or object definition
def initLangton(name:String) {
^